# cv-ml-pipline

./: .gitignore  CAREER_IMPACT.md  Dockerfile  README.md  RESUME_ASSETS.md  ROADMAP.md  conftest.py  copy selected files from AWS S3 by using boto3-boto3-copy-file-from-s3-with-condition.py  requirements.txt  s3_copy_files.py  test.py
.github/workflows/: ci.yml  windows-cuda-opencv.yml
computer_vision/: README.md  test.py
cuda/: CMakeLists.txt  main.cu
fastAPI/: Dockerfile  README.md  README.nd  docker-compose.yaml  farshid.py  main.py  requirements.txt  test_docker_local.py  test_function.py
k8s/: deployment.yaml  hpa.yaml  service.yaml
poetry_projcet/: README.md  pyproject.toml  requirements.txt  test.py
poetry_projcet/tests/: test_poetry_projcet.py
seldon/: Dockerfile  Farshid.py  README.md  requirements.txt  test-seldon.py
tests/: test_api.py  test_fastapi_utils.py  test_image_processing.py  test_poetry_project.py  test_seldon.py
