[tool.poetry]
name = "cv-ml-pipeline"
version = "2.0.0"
description = "Computer Vision ML Pipeline — Docker, AWS, Kubernetes, Seldon, Kubeflow"
authors = ["Farshid Pirahansiah"]
license = "MIT"
readme = "README.md"
packages = [{include = "poetry_projcet"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115,<1.0"
uvicorn = ">=0.34,<1.0"
pydantic = ">=2.0,<3.0"
numpy = ">=2.0,<3.0"
opencv-python-headless = ">=4.10,<5.0"
scikit-learn = ">=1.5,<2.0"
scipy = ">=1.14,<2.0"
matplotlib = ">=3.9,<4.0"
pillow = ">=11.0,<13.0"
requests = ">=2.32,<3.0"
seldon-core = ">=1.18,<2.0"
kfp = ">=2.0,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
pytest-cov = ">=6.0,<7.0"
ruff = ">=0.8,<1.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
